--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -36,6 +36,7 @@
       "args": [
         "--inspect-brk",
         "${workspaceFolder}/node_modules/.bin/jest",
+        "svm",
         "--runInBand",
         "--rootDir=${workspaceFolder}",
         "-c=${workspaceFolder}/jest.config.js"
